# ZKP-cas721

./: .gitignore  README.md
src/: CMakeLists.txt  Prover.cpp  Prover.h  Verifier.cpp  Verifier.h  main.cpp
src/matrices/: matrix128x128a.txt  matrix128x128b.txt  matrix128x128c.txt  matrix16x16a.txt  matrix16x16b.txt  matrix16x16c.txt  matrix32x32a.txt  matrix32x32b.txt  matrix32x32c.txt  matrix64x64a.txt  matrix64x64b.txt  matrix64x64c.txt  matrix8x8a.txt  matrix8x8b.txt  matrix8x8c.txt
